--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,8 +54,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    /* removed an extra . from the image relative path */
-    background-image: url("./images/digital-marketing-meeting.jpg");
+    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
